changed email content

--- a/app/views/booking_mailer/booking_confirmed.html.erb
+++ b/app/views/booking_mailer/booking_confirmed.html.erb
@@ -7,4 +7,4 @@ Booking details<br>
 <p>Date: <%= @booking.date %></p>
 <p>Time: <%= @booking.time %></p>
 
-<p>We look forward to seeing you soon, if you'd like to change your appointment contact us on ...%></p>
+<p>We look forward to seeing you soon, if you'd like to change your appointment 020 7387 4567.</p>
