--- a/app/views/booking_mailer/booking_confirmed.text.erb
+++ b/app/views/booking_mailer/booking_confirmed.text.erb
@@ -7,4 +7,4 @@ Booking Details:
 Appointment: <%= @booking.appointment_type %>
 Date: <%= @booking.date %>
 Time: <%= @booking.time %>
-We look forward to seeing you soon, if you'd like to change your appointment contact us on ...
+We look forward to seeing you soon, if you'd like to change your appointment contact us on 020 7387 4567.
