--- a/app/views/booking_mailer/confirmation_email.html.erb
+++ b/app/views/booking_mailer/confirmation_email.html.erb
@@ -7,4 +7,4 @@ Booking details<br>
 <p>Date: <%= @booking.date %></p>
 <p>Time: <%= @booking.time %>:00</p>
 
-<p>We'll be in touch as soon as possible to confirm your booking, if you'd like to make any changes, please call us on... or email us at houseofcamden@gmail.com</p>
+<p>We'll be in touch as soon as possible to confirm your booking, if you'd like to make any changes, please call us on 020 7387 4567.</p>
