--- a/app/views/booking_mailer/confirmation_email.text.erb
+++ b/app/views/booking_mailer/confirmation_email.text.erb
@@ -8,5 +8,5 @@ Appointment: <%= @booking.appointment_type %>
 Date: <%= @booking.date %>
 Time: <%= @booking.time %>:00
 
-We'll be in touch as soon as possible to confirm your booking, if you'd like to make any changes, please call us on... or email us at houseofcamden@gmail.com
+We'll be in touch as soon as possible to confirm your booking, if you'd like to make any changes, please call us on 020 7387 4567.
 
